// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing HomeContainer component 1`] = `
<div
  className="home-container"
>
  <div
    className="sliding-bg"
  />
  <Connect(HomeHalf)
    chosen={false}
    section="newest"
  />
  <Connect(HomeHalf)
    chosen={false}
    section="liked"
  />
  <Connect(NavBar)
    navbarStatus="closed"
  />
</div>
`;

exports[`testing HomeContainer component with liked section as the chosen section 1`] = `
<div
  className="home-container liked-opened"
>
  <div
    className="sliding-bg"
  />
  <Connect(HomeHalf)
    chosen={false}
    section="newest"
  />
  <Connect(HomeHalf)
    chosen={true}
    section="liked"
  />
  <Connect(NavBar)
    navbarStatus="closed"
  />
</div>
`;

exports[`testing HomeContainer component with newest section as the chosen section 1`] = `
<div
  className="home-container newest-opened"
>
  <div
    className="sliding-bg"
  />
  <Connect(HomeHalf)
    chosen={true}
    section="newest"
  />
  <Connect(HomeHalf)
    chosen={false}
    section="liked"
  />
  <Connect(NavBar)
    navbarStatus="closed"
  />
</div>
`;
